bad/int_negation_of_void.example_compiler_output
ERROR
[1mbad/int_negation_of_void.lat:5:2: [1;31merror: [0;1mcannot negate value of non-integer type `void`[m
	-foo();
	[1;32m^[m
